recursion.cons.lessons.recursion.cons.Min.scala.error
min:3: error: value del is not a member of Int
		l.tail.head.del		
                            ^min:2: error: type mismatch;
 found   : Unit
 required: Int
	if(l.head<l.tail.head){
        ^