recursion.cons.lessons.recursion.cons.Min.scala.code
def min(l:List[Int]): Int = {
	if(l.head<l.tail.head){
		l.tail.head.del		
	}
}
